# ReQL-Core

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Cartfile.private  Cartfile.resolved  LICENSE  Makefile  README.md  Rakefile  ReQL-CPP.cpp  ReQL-CPP.hpp  ReQL-Lua.c  ReQL-Node.cpp  ReQL-ObjC.h  ReQL-ObjC.m  ReQL-Python.c  ReQL-Ruby.c  ReQL-ast-CPP.cpp  ReQL-ast-CPP.hpp  ReQL-ast-Lua.c  ReQL-ast-Lua.h  ReQL-ast-Node.cpp  ReQL-ast-Node.hpp  ReQL-ast-ObjC.h  ReQL-ast-ObjC.m  ReQL-ast-Python.c  ReQL-ast-Python.h  ReQL-ast-Ruby.c  ReQL-ast-Ruby.h  ReQL-ast-test.cpp  ReQL-ast-test.hpp  ReQL-ast.c  ReQL-ast.cpp  ReQL-ast.h  ReQL-ast.hpp  ReQL-char.c  ReQL-char.h  (+65 more)
src/: CMakeLists.txt  ReQL.c  ReQL.cpp  ReQL.h  ReQL.hpp  connection.cpp  connection.h  connection.hpp  cursor.cpp  cursor.h  cursor.hpp  libReQL.pro  libReQL.sln  libReQL.vcxproj  libReQL.vcxproj.filters  query.cpp  query.h  query.hpp  result.hpp  src.pro
src/Lua/: ReQL.c  ReQL.cpp  ast.c  ast.h  connection.c  connection.cpp  connection.hpp  cursor.c  cursor.cpp  cursor.h  cursor.hpp  expr.c  expr.h  interface.hpp  new.c  new.h  query.c  query.cpp  query.h  query.hpp
src/Node/: ast.cpp  ast.hpp  expr.hpp
src/ObjC/: Cursor.h  Cursor.mm  ast.h  ast.m  connection.h  connection.m  expr.h  expr.m
src/Python/: ReQL.c  ast.c  ast.h  connection.c  connection.h  cursor.c  cursor.h  expr.h  new.c  new.h  query.c  query.h  types.c  types.h
src/Ruby/: ReQL.c  ast.c  ast.h  expr.h
src/c/: ast.c  ast.h  char.c  char.h  connection.c  connection.h  cursor.c  cursor.h  decode.c  decode.h  encode.c  encode.h  error.c  error.h  expr.c  expr.h  json.c  json.h  query.c  query.h  types.h
src/c/dev/: ast.h  char.h  connection.h  cursor.h  decode.h  encode.h  error.h  expr.h  json.h
src/c/util/: portable_pthread.h  reql_assert.h  util.h
src/core/: connection.hpp  decode.hpp  error.hpp  handshake.hpp  object.hpp  protocol.hpp  query.hpp  socket.hpp  string.hpp  term.hpp
src/cpp/: ast.cpp  ast.hpp  connection.cpp  connection.hpp  cursor.cpp  cursor.hpp  error.cpp  error.hpp  expr.cpp  expr.hpp  new.cpp  new.hpp  parser.cpp  parser.hpp  query.cpp  query.hpp  result.cpp  result.hpp  types.hpp  wrapper.cpp  wrapper.hpp
src/reql/: ast.c  ast.h  btree.hpp  char.c  char.cpp  char.h  char.hpp  connection.c  connection.cpp  connection.h  connection.hpp  core.h  core.hpp  cursor.c  cursor.cpp  cursor.h  cursor.hpp  decode.c  decode.cpp  decode.h  decode.hpp  encode.c  encode.cpp  encode.h  encode.hpp  error.c  error.cpp  error.hpp  expr.c  expr.h  handshake.hpp  null.hpp  object.hpp  parser.hpp  pipe.hpp  portable_endian.h  protocol.hpp  query.c  query.cpp  query.h  (+8 more)
src/reql/core/: array.hpp  connection.hpp  decode.hpp  error.hpp  handshake.hpp  object.hpp  protocol.hpp  query.hpp  socket.hpp  term.hpp
test/: CMakeLists.txt  Info.plist  catch.hpp  connect_test.m  libReQLTests.m  main.cpp  test.cpp  test.hpp  test.pro
test/ObjC/: Cursor.swift
test/ObjC/polyglot/: default.swift  joins.swift  json.swift  polymorphism.swift  random.swift  selection.swift  timeout.swift
test/ObjC/polyglot/changefeeds/: edge.swift  idxcopy.swift  table.swift
test/ObjC/polyglot/geo/: constructors.swift  geojson.swift  indexing.swift  operations.swift
test/ObjC/polyglot/math_logic/: add.swift  aliases.swift  comparison.swift  div.swift  logic.swift  math.swift  mod.swift
test/ObjC/polyglot/meta/: composite.swift
test/ObjC/polyglot/mutation/: replace.swift
test/ObjC/polyglot/regression/: 1005.swift  1133.swift  1179.swift  2052.swift  2639.rb.swift  2697.swift  2710.swift  2930.swift  3057.swift  3637.swift  3759.swift  4030.swift  4501.swift  4582.swift  4591.swift  46.swift  469.swift  522.swift  545.swift  546.swift  578.swift  579.swift  763.js.swift
test/ObjC/polyglot/sindex/: truncation.swift
test/ObjC/polyglot/times/: shim.swift
test/c/: ast.cpp  connection.cpp  decode.cpp  encode.cpp  expr.cpp
test/c/polyglot/: aggregation.cpp  arity.cpp  arraylimits.cpp  control.cpp  default.cpp  joins.cpp  json.cpp  limits.cpp  match.cpp  polymorphism.cpp  random.cpp  range.cpp  selection.cpp  timeout.cpp  transformation.cpp
test/c/polyglot/changefeeds/: edge.cpp  idxcopy.cpp  include_states.cpp  point.cpp  sindex.cpp  squash.cpp  table.cpp
test/c/polyglot/datum/: array.cpp  binary.cpp  bool.cpp  null.cpp  number.cpp  object.cpp  string.cpp  typeof.cpp  uuid.cpp
test/c/polyglot/geo/: constructors.cpp  geojson.cpp  indexing.cpp  intersection_inclusion.cpp  operations.cpp  primitives.cpp
test/c/polyglot/math_logic/: add.cpp  aliases.cpp  comparison.cpp  div.cpp  floor_ceil_round.cpp  logic.cpp  math.cpp  mod.cpp  mul.cpp  sub.cpp
test/c/polyglot/meta/: composite.cpp  dbs.cpp  table.cpp
test/c/polyglot/mutation/: atomic_get_set.cpp  delete.cpp  insert.cpp  replace.cpp  sync.cpp  update.cpp
test/c/polyglot/regression/: 1001.cpp  1005.cpp  1023.cpp  1081.cpp  1132.cpp  1133.cpp  1155.cpp  1179.cpp  1468.cpp  1789.cpp  2052.cpp  2399.cpp  2639.cpp  2696.cpp  2697.cpp  2709.cpp  2710.cpp  2766.cpp  2767.cpp  2774.cpp  2838.cpp  2930.cpp  3057.cpp  3059.cpp  309.cpp  3444.cpp  3449.cpp  354.cpp  3637.cpp  370.cpp  3745.cpp  3759.cpp  4030.cpp  4146.cpp  4431.cpp  4501.cpp  453.cpp  4582.cpp  4591.cpp  46.cpp  (+18 more)
test/c/polyglot/sindex/: api.cpp  status.cpp  truncation.cpp
test/c/polyglot/times/: api.cpp  constructors.cpp  constructors114.cpp  index.cpp  portions.cpp  shim.cpp  time_arith.cpp  timezones.cpp
test/c/polyglot/transform/: array.cpp  map.cpp  (+1 more)
test/cpp/: connection.cpp  expr.cpp
test/cpp/polyglot/: aggregation.cpp  arity.cpp  arraylimits.cpp  control.cpp  default.cpp  joins.cpp  json.cpp  limits.cpp  match.cpp  polymorphism.cpp  random.cpp  range.cpp  selection.cpp  timeout.cpp  transformation.cpp
test/reql/: connection.cpp  cursor.cpp  decode.cpp  encode.cpp  expr.cpp
test/reql/polyglot/: aggregation.cpp  arity.cpp  arraylimits.cpp  control.cpp  default.cpp  joins.cpp  json.cpp  limits.cpp  match.cpp  polymorphism.cpp  random.cpp  range.cpp  selection.cpp  timeout.cpp  transformation.cpp
(+473 files in other folders)
