cmake_minimum_required(VERSION 2.8)

project(test)

set(SOURCES
 cpp/connection.cpp
 cpp/polyglot/aggregation.cpp
 cpp/polyglot/arity.cpp
 cpp/polyglot/changefeeds/edge.cpp
 cpp/polyglot/changefeeds/idxcopy.cpp
 cpp/polyglot/changefeeds/include_states.cpp
 cpp/polyglot/changefeeds/point.cpp
 cpp/polyglot/changefeeds/sindex.cpp
 cpp/polyglot/changefeeds/squash.cpp
 cpp/polyglot/changefeeds/table.cpp
 cpp/polyglot/control.cpp
 cpp/polyglot/datum/array.cpp
 cpp/polyglot/datum/binary.cpp
 cpp/polyglot/datum/bool.cpp
 cpp/polyglot/datum/null.cpp
 cpp/polyglot/datum/number.cpp
 cpp/polyglot/datum/object.cpp
 cpp/polyglot/datum/string.cpp
 cpp/polyglot/datum/typeof.cpp
 cpp/polyglot/datum/uuid.cpp
 cpp/polyglot/default.cpp
 cpp/polyglot/geo/constructors.cpp
 cpp/polyglot/geo/geojson.cpp
 cpp/polyglot/geo/indexing.cpp
 cpp/polyglot/geo/intersection_inclusion.cpp
 cpp/polyglot/geo/operations.cpp
 cpp/polyglot/geo/primitives.cpp
 cpp/polyglot/joins.cpp
 cpp/polyglot/json.cpp
 cpp/polyglot/limits.cpp
 cpp/polyglot/match.cpp
 cpp/polyglot/math_logic/add.cpp
 cpp/polyglot/math_logic/aliases.cpp
 cpp/polyglot/math_logic/comparison.cpp
 cpp/polyglot/math_logic/div.cpp
 cpp/polyglot/math_logic/floor_ceil_round.cpp
 cpp/polyglot/math_logic/logic.cpp
 cpp/polyglot/math_logic/math.cpp
 cpp/polyglot/math_logic/mod.cpp
 cpp/polyglot/math_logic/mul.cpp
 cpp/polyglot/math_logic/sub.cpp
 cpp/polyglot/meta/composite.cpp
 cpp/polyglot/meta/dbs.cpp
 cpp/polyglot/meta/table.cpp
 cpp/polyglot/meta/table48.cpp
 cpp/polyglot/mutation/atomic_get_set.cpp
 cpp/polyglot/mutation/delete.cpp
 cpp/polyglot/mutation/insert.cpp
 cpp/polyglot/mutation/replace.cpp
 cpp/polyglot/mutation/sync.cpp
 cpp/polyglot/mutation/update.cpp
 cpp/polyglot/polymorphism.cpp
 cpp/polyglot/random.cpp
 cpp/polyglot/range.cpp
 cpp/polyglot/regression/1001.cpp
 cpp/polyglot/regression/1005.cpp
 cpp/polyglot/regression/1023.cpp
 cpp/polyglot/regression/1081.cpp
 cpp/polyglot/regression/1132.cpp
 cpp/polyglot/regression/1133.cpp
 cpp/polyglot/regression/1155.cpp
 cpp/polyglot/regression/1179.cpp
 cpp/polyglot/regression/1468.cpp
 cpp/polyglot/regression/1789.cpp
 cpp/polyglot/regression/2052.cpp
 cpp/polyglot/regression/2399.cpp
 cpp/polyglot/regression/2639.rb.cpp
 cpp/polyglot/regression/2696.cpp
 cpp/polyglot/regression/2697.cpp
 cpp/polyglot/regression/2709.cpp
 cpp/polyglot/regression/2710.cpp
 cpp/polyglot/regression/2766.cpp
 cpp/polyglot/regression/2767.cpp
 cpp/polyglot/regression/2774.cpp
 cpp/polyglot/regression/2838.cpp
 cpp/polyglot/regression/2930.cpp
 cpp/polyglot/regression/3057.cpp
 cpp/polyglot/regression/3059.cpp
 cpp/polyglot/regression/309.cpp
 cpp/polyglot/regression/3444.cpp
 cpp/polyglot/regression/3449.cpp
 cpp/polyglot/regression/354.cpp
 cpp/polyglot/regression/3637.cpp
 cpp/polyglot/regression/370.cpp
 cpp/polyglot/regression/3745.cpp
 cpp/polyglot/regression/3759.cpp
 cpp/polyglot/regression/4030.cpp
 cpp/polyglot/regression/4146.cpp
 cpp/polyglot/regression/4431.cpp
 cpp/polyglot/regression/4501.cpp
 cpp/polyglot/regression/453.cpp
 cpp/polyglot/regression/4582.cpp
 cpp/polyglot/regression/4591.cpp
 cpp/polyglot/regression/46.cpp
 cpp/polyglot/regression/469.cpp
 cpp/polyglot/regression/522.cpp
 cpp/polyglot/regression/545.cpp
 cpp/polyglot/regression/546.cpp
 cpp/polyglot/regression/568.cpp
 cpp/polyglot/regression/578.cpp
 cpp/polyglot/regression/579.cpp
 cpp/polyglot/regression/619.cpp
 cpp/polyglot/regression/665.cpp
 cpp/polyglot/regression/678.cpp
 cpp/polyglot/regression/718.cpp
 cpp/polyglot/regression/730.cpp
 cpp/polyglot/regression/757.cpp
 cpp/polyglot/regression/763.js.cpp
 cpp/polyglot/regression/767.cpp
 cpp/polyglot/regression/779.cpp
 cpp/polyglot/regression/831.cpp
 cpp/polyglot/selection.cpp
 cpp/polyglot/sindex/api.cpp
 cpp/polyglot/sindex/status.cpp
 cpp/polyglot/sindex/truncation.cpp
 cpp/polyglot/timeout.cpp
 cpp/polyglot/times/api.cpp
 cpp/polyglot/times/api114.cpp
 cpp/polyglot/times/constructors.cpp
 cpp/polyglot/times/constructors114.cpp
 cpp/polyglot/times/index.cpp
 cpp/polyglot/times/portions.cpp
 cpp/polyglot/times/shim.cpp
 cpp/polyglot/times/time_arith.cpp
 cpp/polyglot/times/timezones.cpp
 cpp/polyglot/transform/array.cpp
 cpp/polyglot/transform/array119.cpp
 cpp/polyglot/transform/map.cpp
 cpp/polyglot/transform/object.cpp
 cpp/polyglot/transform/object120.cpp
 cpp/polyglot/transformation.cpp
 main.cpp
)

set(MOC_HEADERS
 catch.hpp
)

add_executable(libReQLtest ${SOURCES} ${MOC_HEADERS})

list(APPEND CMAKE_CXX_FLAGS "-std=c++14 -O0 -Werror -Weverything -Wno-padded -Wno-c++98-compat -I../src -I. -Wno-exit-time-destructors ${CMAKE_CXX_FLAGS}")
